# camping_review

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  Scraper.yml  scraper.yml
app/: __init__.py  config.py
app/static/css/: imageupload.css  login.css  register.css  review_styles.css  styles.css
app/static/js/: imageupload.js  login.js  register.js  review_scripts.js  scripts.js
app/templates/: Review.html  base.html  callback.html  footer.html  imageupload.html  index.html  login.html  navbar.html  naver_login_callback.html  register.html  review.html  review_page.html  text.html
app/views/: api.py  camping_data.py  main.py  review.py  review_page.py  scraper.py  user.py
proceedings/: 21_5_22.md
tests/: conftest.py
tests/views/: test_api.py  test_camping_data.py  test_main.py  test_review.py
