[tool.poetry]
name = "camping_review"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pymongo = "^3.11.4"
requests = "^2.25.1"
bs4 = "^0.0.1"
PyJWT = "^2.4.0"
python-dotenv = "^0.17.1"
pytest-flask = "^1.2.0"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
